syntax = "proto3";

message TestArrayP {
  repeated int32 int_arr = 1;
}

